# vision-ft

./: .gitignore  README.md  main.py  pyproject.toml
configs/: lora.yml  mnist.yml  mnist_check.yml  mnist_schedulefree.yml
configs/auraflow/: lora.yml  preview.yml
configs/lumina2/text_to_image/: lora.yml  preview.yml
configs/sdxl/: text_to_image_lora.yml
configs/sdxl/flow_match/: config.yml
configs/sdxl/flow_match_x0/: config.yml
configs/sdxl/ip_adapter/: config.yml  preview.yml
configs/sdxl/prompt_free/: config.ref.yml  config.self.yml  config.yml
configs/sdxl/rope_distill/: config.yml  preview.yml
configs/sdxl/style_tokenizer/: config.yml  preview.yml
scripts/: inference_webui_server.sh  quantize_model.sh  run_inference.sh  train.sh
scripts/bench/: sdxl_quant.sh
scripts/data/: dl_konachan.sh  dl_sfw_0.1k.sh  wd_tagger.sh
scripts/inference/: cogview4_quant_compare.sh  inference_webui_client.sh  inference_webui_server.sh  snapshot_max_memory.sh
scripts/train/: rope_migration.sh  rope_switch.sh  text_to_image.sh
scripts/train/auraflow/: rope_migration.sh  rope_switch.sh  shortcut.sh  text_to_image.sh  vae_encode_migration.sh
scripts/train/lumina2/: text_to_image.sh
scripts/train/sdxl/: flow_match.sh  ip_adapter.kyara.sh  ip_adapter.ref.sh  ip_adapter.self.sh  ip_adapter.sh  prompt_free.ref.sh  prompt_free.self.sh  prompt_free.sh  rope_distill.sh  style_tokenizer.sh  text_to_image.sh
src/: config.py  dataloader.py  trainer.py
src/dataset/: __init__.py  aspect_ratio_bucket.py  bucket.py  kyara.py  mnist.py  preprocessor.py  referenced_text_to_image.py  referencing_text_to_image.py  single_caption_bucket.py  styled_text_to_image.py  t2i.py  tags.py  text_to_image.py  transform.py  util.py
src/dataset/caption/: __init__.py  append.py  drop.py  prefix.py  replace.py  shuffle.py  util.py
src/dataset/preview/: text_to_image.py
src/models/: __init__.py  auto.py  for_training.py  mnist.py  utils.py
src/models/auraflow/: README.md  __init__.py  config.py  denoiser.py  original_mmdit.py  pipeline.py  scheduler.py  text_encoder.py  vae.py
src/models/cogview4/: README.md  __init__.py  config.py  denoiser.py  pipeline.py  scheduler.py  text_encoder.py  vae.py
src/models/flux/: README.md  __init__.py  config.py  denoiser.py  pipeline.py  text_encoder.py  vae.py
src/models/fractal/: README.md  generator.py  mask.py  order_sampler.py  pixel.py
src/models/lumina2/: README.md  __init__.py  config.py  denoiser.py  pipeline.py  scheduler.py  text_encoder.py  util.py  vae.py
src/models/sdxl/: README.md  __init__.py  config.py  denoiser.py  pipeline.py  scheduler.py  text_encoder.py  (+2 more)
src/modules/: attention.py  long_prompt.py  norm.py  offload.py  patch.py  reward.py
src/optimizer/: __init__.py  util.py
src/preview/: __init__.py  discord.py  local.py  util.py
src/saving/: __init__.py  hf_hub.py  safetensors.py  util.py
src/scheduler/: __init__.py  nothing.py  util.py
src/trainer/: common.py  t2i.py
src/utils/: dtype.py  logging.py  quantize.py  safetensors.py  state_dict.py  tensor.py  video.py
tests/: test_comfy.py  test_config.py  test_dataset.py  test_flux.py  test_mnist.py  test_modules_quant.py  test_offload.py  test_patch.py  test_peft.py  test_reward.py  test_saving.py  test_sdxl.py  test_shortcut.py  test_utils.py
tests/adapter/: test_ip_adapter.py  test_prompt_free.py
tests/assets/: debug_dataset.yml
tests/dataset/: test_caption_preprocessor.py
tests/libraries/: test_optimum_quanto.py
tests/models/: test_cogview4.py  test_fractalgen.py  test_lumina2.py  test_sdxl.py  test_wan.py
tools/: cogview4_quant_compare.py  dl_safebooru.py  inference_cli.py  inference_client.py  inference_server.py  quantize_model.py
tools/bench/: check_memory.py  sdxl_quant.py
tools/checkpoint/: change_dtype.py  to_safetensors.py
tools/data/: dl_konachan.py  dl_styled_images.py  get_styled_images.py
train/: rope_migration.py  rope_migration_ppl.py  rope_switch.py  shortcut.py  text_to_image.py  vae_encode_migration.py
train/auraflow/: text_to_image.py  vae_encode_migration.py
train/cogview4/: text_to_image.py
train/lumina2/: text_to_image.py
train/sdxl/: draft_plus.py  flow_match.py  ip_adapter.kyara.py  ip_adapter.py  ip_adapter.ref.py  ip_adapter.self.py  prompt_free.ref.py  prompt_free.self.py  rope_distill.py  style_tokenizer.py  text_to_image.py
(+51 files in other folders)
